added interactive maps

--- a/src/index.html
+++ b/src/index.html
@@ -509,6 +509,88 @@
       </div>
     </section>
 
+    <section class="comment">
+      <div class="container">
+        <h2 class="title">отзывы клиентов</h2>
+        <div class="comment__item">
+          <img src="img/comment_1.png" alt="comment_1" class="comment__img" />
+          <div class="comment__text">
+            <div class="comment__subtitle">Ирина Иванченко</div>
+            <div class="comment__count">2 полумарафона</div>
+            <div class="comment__descr">
+              Не знала, что себе купить - обратилась к ребятам из RunSmart -
+              подобрали пульсометр, который подошёл именно под мои цели и
+              финансовые возможности. Через некоторое время решила обновить
+              гаджет - не раздумывая обратилась туда же.<br /><br />
+              Новые цели - новый гаджет! <br /><br />Спасибо, RunSmart!
+            </div>
+          </div>
+        </div>
+        <div class="comment__item">
+          <img src="img/comment_2.png" alt="comment_2" class="comment__img" />
+          <div class="comment__text">
+            <div class="comment__subtitle">Иван Сёмочкин</div>
+            <div class="comment__count">1 полумарафон</div>
+            <div class="comment__descr">
+              Крутая штука-пульсометр. Обычно без них бегал. Оказывается только
+              хуже себе делал. Купил пульсометр, ещё в подарок получил
+              тренировку. Со мной вместе провели первую тренировку, научили
+              пользоваться новым гаджетом. Также объяснили основы анатомии,
+              составили план тренировок на месяц вперёд. <br /><br />
+              С ними подготовился к своему первому полумарафону! Спасибо!!!
+            </div>
+          </div>
+        </div>
+        <div class="comment__item">
+          <img src="img/comment_3.png" alt="comment_3" class="comment__img" />
+          <div class="comment__text">
+            <div class="comment__subtitle">Юлия Дашкина</div>
+            <div class="comment__count">2 полумарафона</div>
+            <div class="comment__descr">
+              Долго не могла начать бегать, т.к. до этого несколько раз
+              начинала, но становилось тяжело и я бросала. От друзей услышала о
+              RunSmart и о беге с контролем пульса и решила попробовать.
+              <br /><br />
+              Позвонила, ребята поинтересовались моими целями и подобрали очень
+              интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом!
+              Пробежала уже 2 полумарафона и несколько более коротких забегов и
+              не намерена останавливаться! <br /><br />
+              Спасибо!!!
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11791.092009654021!2d69.61435629376425!3d42.36867671860938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38a91d02426a381d%3A0x7eea2a3ae78bdb6!2z0JTQtdC90LTRgNC-0YHQsNGP0LHQsNKb!5e0!3m2!1sru!2skz!4v1662740666541!5m2!1sru!2skz"
+          width="100%"
+          height="100%"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+      <div class="footer__info">
+        <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+        <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+        <div class="footer__social">
+          <a href="#" class="footer__social-item"
+            ><img src="icons/facebook.svg" alt="facebook"
+          /></a>
+          <a href="#" class="footer__social-item"
+            ><img src="icons/instagram.svg" alt="instagram"
+          /></a>
+          <a href="#" class="footer__social-item"
+            ><img src="icons/pinterest.svg" alt="pinterest"
+          /></a>
+        </div>
+      </div>
+    </footer>
+
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.11.0.min.js"
