--- a/src/index.html
+++ b/src/index.html
@@ -110,12 +110,7 @@
         </div>
         <form class="feed-form" action="#">
           <input name="name" required placeholder="Ваше имя" type="text" />
-          <input
-            name="phone"
-            required
-            placeholder="Ваш телефон"
-            type="number"
-          />
+          <input name="phone" required placeholder="Ваш телефон" />
           <input name="email" required placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
@@ -602,12 +597,7 @@
         <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
         <form class="feed-form feed-form_mt25" action="#">
           <input name="name" required placeholder="Ваше имя" type="text" />
-          <input
-            name="phone"
-            required
-            placeholder="Ваш телефон"
-            type="number"
-          />
+          <input name="phone" required placeholder="Ваш телефон" />
           <input name="email" required placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
@@ -651,6 +641,7 @@
       src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
     ></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
